k8s/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: thrall-defender-stripprefix
  namespace: thrall-defender
spec:
  stripPrefix:
    prefixes:
      - /thrall-defender
