k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: thrall-defender
  labels:
    name: thrall-defender
