k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thrall-defender-ingress
  namespace: thrall-defender
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  rules:
  - http:
      paths:
      # Frontend - debe ser el último para que no capture las rutas del backend
      - path: /thrall-defender
        pathType: Prefix
        backend:
          service:
            name: thrall-frontend
            port:
              number: 80
